# embedelite-sk-plugin

./: .env.example  README.md  main.py  pyproject.toml
plugins/EmbedElitePlugin/: EmbedElitePlugin.py
